# Ai-Avatar

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_HF.md
backend/: .env.example  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_baseline.py  319818f0f329_create_avatar_domain.py  ee9743d0bfe0_create_users.py  fa6a5a1b2c9f_create_generation_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routers/: auth.py  avatars.py  generation.py  health.py
backend/app/core/: config.py  logging.py  paths.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  avatar.py  enums.py  generated_video.py  generation_job.py  training_script.py  training_video.py  user.py  voice_model.py
backend/app/pipelines/: _subproc.py
backend/app/pipelines/avatar_creation/: errors.py  runner.py
backend/app/pipelines/avatar_creation/ml/: backends.py  ffmpeg.py  (+1 more)
backend/app/pipelines/generation/: orchestrator.py  progress.py  steps.py
backend/app/queue/: db_queue.py
backend/app/schemas/: __init__.py  auth.py  avatar.py  generation.py
backend/app/services/: __init__.py  auth_service.py  avatar_service.py  generation_service.py  script_service.py  upload_service.py
backend/app/tests/: conftest.py  test_auth.py  test_avatars.py  test_config_echomimic.py  test_echomimic_crop.py  test_generation.py  test_generation_echomimic.py  test_health.py  test_paths_halfbody.py  test_pipeline.py
backend/worker/: main.py
(+104 files in other folders)
